force-app/main/default/objects/Pending_PDF_Generation__c/Pending_PDF_Generation__c.object-meta.xml
<CustomObject>
    <description>Background queue for native browser-based PDF generation jobs.</description>
    <label>Pending PDF Generation</label>
    <nameField>
        <displayFormat>PDFJOB-{00000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending PDF Generations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>