force-app/main/default/objects/Pending_PDF_Generation__c/fields/Output_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Output_Content_Version_Id__c</fullName>
    <description>ContentVersion Id of the generated filled PDF.</description>
    <label>Output Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>