force-app/main/default/objects/Pending_PDF_Generation__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>18-character Salesforce Id of the Account or Contact (donor) record to fill.</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>