force-app/main/default/objects/Pending_PDF_Generation__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>PDF template used to generate the filled document.</description>
    <label>Template</label>
    <referenceTo>PDF_Template__c</referenceTo>
    <relationshipLabel>Pending PDF Generations</relationshipLabel>
    <relationshipName>Pending_PDF_Generations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>