force-app/main/default/objects/Pending_PDF_Generation__c/listViews/Pending_Jobs.listView-meta.xml
<ListView>
    <fullName>Pending_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Template_Id__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Jobs</label>
</ListView>